--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
   "functions": {
     "api/save.js": {
       "maxDuration": 30
     }
   },
-  "routes": [
+  "rewrites": [
     {
-      "src": "/save.php",
-      "dest": "/api/save.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
+      "source": "/save.php",
+      "destination": "/api/save.js"
     }
-  ],
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": "."
+  ]
 }
