--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,20 @@
     {
       "source": "/save.php",
       "destination": "/api/save.js"
+    },
+    {
+      "source": "/api/save.php",
+      "destination": "/api/save.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+      ]
     }
   ]
 }
