--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,8 @@
 {
-  "functions": {
-    "api/save.js": {
-      "maxDuration": 30
-    }
-  },
   "rewrites": [
     {
-      "source": "/save.php",
-      "destination": "/api/save.js"
-    },
-    {
-      "source": "/api/save.php",
-      "destination": "/api/save.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
-      ]
+      "source": "/(.*)",
+      "destination": "/editor.html"
     }
   ]
 }
